[gd_scene load_steps=6 format=2]

[ext_resource path="res://frog2.png" type="Texture" id=1]
[ext_resource path="res://frog1.png" type="Texture" id=2]
[ext_resource path="res://EnemyFrog.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="EnemyFrog" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )

[node name="JumpTimer" type="Timer" parent="."]
wait_time = 0.4
autostart = true

[node name="StunTimer" type="Timer" parent="."]
wait_time = 4.0

[connection signal="timeout" from="JumpTimer" to="." method="_on_JumpTimer_timeout"]
[connection signal="timeout" from="StunTimer" to="." method="_on_StunTimer_timeout"]
